tests/rosetta/out/Java/boyer-moore-string-search.error
javac: exit status 1
/tmp/BoyerMooreStringSearch.java:48: error: incompatible types: String cannot be converted to Number
            s = s + ((Number)String.valueOf(nums.get(i))).doubleValue();
                                           ^
/tmp/BoyerMooreStringSearch.java:59: error: incompatible types: String cannot be converted to Number
            System.out.println("text" + String.valueOf(i + 1) + " = " + ((Number)texts.get(i)).doubleValue());
                                                                                          ^
/tmp/BoyerMooreStringSearch.java:66: error: incompatible types: String cannot be converted to Number
            System.out.println(((Number)((Number)((Number)((Number)"Found \"" + ((Number)patterns.get(j)).doubleValue()).doubleValue() + "\" in 'text").doubleValue() + String.valueOf(j + 1)).doubleValue() + "' at indexes ").doubleValue() + display(idxs));
                                                                   ^
/tmp/BoyerMooreStringSearch.java:66: error: incompatible types: String cannot be converted to Number
            System.out.println(((Number)((Number)((Number)((Number)"Found \"" + ((Number)patterns.get(j)).doubleValue()).doubleValue() + "\" in 'text").doubleValue() + String.valueOf(j + 1)).doubleValue() + "' at indexes ").doubleValue() + display(idxs));
                                                                                                     ^
/tmp/BoyerMooreStringSearch.java:66: error: cannot find symbol
            System.out.println(((Number)((Number)((Number)((Number)"Found \"" + ((Number)patterns.get(j)).doubleValue()).doubleValue() + "\" in 'text").doubleValue() + String.valueOf(j + 1)).doubleValue() + "' at indexes ").doubleValue() + display(idxs));
                                                                                                                                                       ^
  symbol:   method doubleValue()
  location: class String
/tmp/BoyerMooreStringSearch.java:66: error: cannot find symbol
            System.out.println(((Number)((Number)((Number)((Number)"Found \"" + ((Number)patterns.get(j)).doubleValue()).doubleValue() + "\" in 'text").doubleValue() + String.valueOf(j + 1)).doubleValue() + "' at indexes ").doubleValue() + display(idxs));
                                                                                                                                                                                              ^
  symbol:   method doubleValue()
  location: class String
/tmp/BoyerMooreStringSearch.java:66: error: cannot find symbol
            System.out.println(((Number)((Number)((Number)((Number)"Found \"" + ((Number)patterns.get(j)).doubleValue()).doubleValue() + "\" in 'text").doubleValue() + String.valueOf(j + 1)).doubleValue() + "' at indexes ").doubleValue() + display(idxs));
                                                                                                                                                                                                                               ^
  symbol:   method doubleValue()
  location: class String
7 errors
